<resources>
    <string name="app_name">Application</string>
    <string name="title_activity_inscritactiv2">Inscritactiv2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="registrer">registrer</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="last_name">last_name</string>
    <string name="first_name">first_name</string>
    <string name="registration">registration</string>
    <string name="contact">contact</string>
    <string name="registrer_now">registrer_now</string>
    <string name="login">login</string>
    <string name="password2">password2</string>
    <string name="email2">email2</string>
    <string name="authentification">authentification</string>
</resources>